# mcp-tutorial

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: README.md
db/mongo/: 01_init_collections.js
db/postgres/: 001_countries.sql  002_olympic_games.sql  003_athletes.sql  004_athlete_events.sql
docker/: Dockerfile.seed  requirements-seed.txt
docker/mongo/: mongod.conf
notebooks/: demo_mcp_toolbox.ipynb  simple_tool_calls.ipynb
scripts/: run_agent_demo.py  seed_databases.py  verify_stack.sh
scripts/tests/: test_databases.sh  verify_stack.sh
src/mcp_tutorial/: __init__.py  agent.py  prompts.py  settings.py
toolbox/config/tools/: 01_sources.yaml  02_postgres_tools.yaml  03_mongo_tools.yaml  04_toolsets.yaml  05_prompts.yaml
